--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <p>This page showcases my work as a journalism student. Throughout the semester, I will be updating this page with new content and assignments related to my journalism studies. Feel free to explore the links below to learn more about my work and the topics I am passionate about.</p>
 </p>
 </body>
-<a href="mailto:ajh4r8@umsystem.edu">
-        <img src="img-01.jpeg" alt="My Photo">
+<main>
+    <div>
+        <a href="mailto:ajh4r8@umsystem.edu">
+        <img src="img-01.jpeg" 
     </a>
+</div>
  <ul>
         <li><a href="https://www.columbiamissourian.com/users/profile/aleigha%20hornaday/">My Missourian Work</a></li>
         <li><a href="https://www.instagram.com/leighaphotography/">My Photography Page</a></li>
