--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <main>
     <div>
         <a href="mailto:ajh4r8@umsystem.edu">
-        <img src="img-01.jpeg">
+        <img/ src="img-01.jpeg">
     </a>
 </div>
  <ul>
         <li><a href="https://www.columbiamissourian.com/users/profile/aleigha%20hornaday/">My Missourian Work</a></li>
         <li><a href="https://www.instagram.com/leighaphotography/">My Photography Page</a></li>
-        <li><a href="https://www.aleighahornaday.com"> My Portfolio</a></li>
+        <li><a href="https://www.aleighahornaday.com">My Portfolio</a></li>
     </ul>
 <nav>
         <ul>
