--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
     <div>
         <a href="mailto:ajh4r8@umsystem.edu">
-        <img/ src="img-01.jpeg"/>
+        <img src="img/-01.jpeg">
     </a>
 </div>
  <ul>
