--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <main>
     <div>
         <a href="mailto:ajh4r8@umsystem.edu">
-        <img src="img/img-01.jpeg">
+        <img src="img/img-01.jpeg"
+        width="400"
+        height="200">
     </a>
 </div>
  <ul>
