--- a/index.html
+++ b/index.html
@@ -3,30 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aleigha Hornaday's Page</title>
+    <title> Aleigha Hornaday's Page </title>
+     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome To Aleigha Hornaday's Page </h1>
-    <p>This page showcases my work as a journalism student. Throughout the semester, I will be updating this page with new content and assignments related to my journalism studies. Feel free to explore the links below to learn more about my work and the topics I am passionate about.</p>
-</p>
-</body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index-list.html">Best Teen Drama Shows from the 2000s</a></li>
+      </ul>
+    </nav>
 <main>
-    <div>
-        <a href="mailto:ajh4r8@umsystem.edu">
+    <center>
+    <h1>Aleigha's Website </h1>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+    <a href="mailto:example@thing.com"> Contact via email 
+        <div class="picture-centered-text">
         <img src="img/img-01.jpeg"
-        width="300"
-        height="200">
-    </a>
-</div>
- <ul>
-        <li><a href="https://www.columbiamissourian.com/users/profile/aleigha%20hornaday/">My Missourian Work</a></li>
+        alt="Portrait of Aleigha with Camera"
+        border="0"
+        width="400"
+        height="600">
+</a>
+
+<h2> My Work: </h2>
+<ul>
+    <li><a href="https://www.columbiamissourian.com/users/profile/aleigha%20hornaday/">My Missourian Work</a></li>
         <li><a href="https://www.instagram.com/leighaphotography/">My Photography Page</a></li>
         <li><a href="https://www.aleighahornaday.com">My Portfolio</a></li>
-    </ul>
-<nav>
-        <ul>
-            <li><a href="another-page.html">Another Page on My Site</a></li>
-            <li><a href="https://www.instagram.com/leighaphotography/">External Site</a></li>
-        </ul>
-    </nav>
+</ul>
+<h2> Internal Link: </h2>
+<ul>
+    <li><a href="blank.html">Link 1</a></li>
+ </center>
+</ul>
+</main>
+</body>
+    <footer>Aleigha Hornaday, 2024 &copy; All TV poster images come from Amazon.</footer>  
 </html>
