--- a/index-locations.html
+++ b/index-locations.html
@@ -121,7 +121,7 @@
 </p>
                 </div>
             </section> 
-<iframe title="Filming Locations of 2000s TV Shows" aria-label="Locator map" id="datawrapper-chart-BEwFP" src="https://datawrapper.dwcdn.net/BEwFP/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="548" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+<iframe title="Filming Locations of Early 2000s Shows" aria-label="Map" id="datawrapper-chart-IeW9H" src="https://datawrapper.dwcdn.net/IeW9H/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="548" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
     
 </main>
