--- a/index-list.html
+++ b/index-list.html
@@ -10,20 +10,23 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+<a class="skip-link" href="#content">Skip to Content</a>
+
 <body>
     <center>
 
  <meta property="description" content="List">
-      </head>
-      <a class="skip-link" href="#content">Skip to Content</a>
         
 <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="index-list.html">Shows</a></li>
+        <li><a class="active" href="index-locations.html">Filming Locations</a></li>
     <li><a class="active" href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
+<main id="content">
+    <section class="list">
 <main>
     <h1> 7 Early 2000s Best TV shows </h1>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +49,7 @@
         <p>By Mark Schwahn </p>
          <p><a href="https://www.amazon.com/one-tree-hill-tvposter">Get "One Tree Hill"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-Show-02.jpg"
+        <img src="img/TV-show-02.jpg"
         alt="One Tree Hill TV Poster"
         border="0"
         width="400"
@@ -57,7 +60,7 @@
         <p>Josh Schwartz</p>
          <p><a href="https://www.amazon.com/gossip-girl-tvposter">Get "Gossip Girl"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-Show-03.jpg"
+        <img src="img/TV-show-03.jpg"
         alt="Gossip Girl TV poster"
         border="0"
         width="400"
@@ -68,7 +71,7 @@
         <p>By Julie Plec</p>
          <p><a href="https://www.amazon.com/vampire-diaries-tvposter">Get "The Vampire Diaries"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-Show-04.jpeg"
+        <img src="img/TV-show-04.jpeg"
         alt="The Vampire Diaries TV poster"
         border="0"
         width="400"
@@ -79,7 +82,7 @@
         <p>By Marlene King</p>
          <p><a href="https://www.amazon.com/pretty-little-liars-tvposter">Get "Pretty Little Liars"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-Show-05.jpg"
+        <img src="img/TV-show-05.jpg"
         alt="Pretty Little Liars TV poster"
         border="0"
         width="400"
@@ -90,7 +93,7 @@
         <p>By Jeff David</p>
          <p><a href="https://www.amazon.com/teen-wolf-tvposter">Get "Teen Wolf"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-Show-06.jpg"
+        <img src="img/TV-show-06.jpg"
         alt="Teen Wolf TV poster"
         border="0"
         width="400"
@@ -101,7 +104,7 @@
         <p>By Lizzy Weiss</p>
          <p><a href="https://www.amazon.com/switched-at-birth-tvposter">Get "Switched At Birth"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-Show-07.jpeg"
+        <img src="img/TV-show-07.jpeg"
         alt="Switched At Birth TV poster"
         border="0"
         width="400"
