--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+<a class="skip-link" href="#content">Skip to Content</a>
+
 <body>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="index-list.html">Best Teen Drama Shows from the 2000s</a></li>
+        <li><a class="active" href="index-locations.html">Filming Locations</a></li>
+        <li><a class="active" href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
 <main>
     <center>
+<meta property="description" content="Index"
+ <main id="content">
+    <section class="Index">
+
     <h1>Aleigha's Website </h1>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+    <p> Hey Everyone! My name is Aleigha Hornaday. I am a senior at the University of Missouri studying jounralism and business. Go ahead and take a look at my website that I made using three different coding languages. </p>
     <a href="mailto:example@thing.com"> Contact via email 
         <div class="picture-centered-text">
         <img src="img/img-01.jpeg"
