--- a/index-locations.html
+++ b/index-locations.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Locations of Early 2000s </title>
-     <link rel="stylesheet" href="css/styles-locations.css">
+    <title> Locations of Early 2000s Tv Shows </title>
+     <link rel="stylesheet" href="css/final-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +26,8 @@
     <li><a class="active" href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
+<main id="content">
+    <section class="Locations">
 <main>
     <h1> 7 Filming Locations of 2000s TV Shows </h1>
         <link rel="preconnect" href="https://fonts.googleapis.com">
