--- a/old-index.html
+++ b/old-index.html
@@ -9,24 +9,21 @@
     <h1>Welcome To Aleigha Hornaday's Page </h1>
     <p>This page showcases my work as a journalism student. Throughout the semester, I will be updating this page with new content and assignments related to my journalism studies. Feel free to explore the links below to learn more about my work and the topics I am passionate about.</p>
 </p>
-</body>
-<main>
-    <div>
-        <a href="mailto:ajh4r8@umsystem.edu">
+<a href="mailto:ajh4r8@umsystem.edu">
         <img src="img/img-01.jpeg"
-        width="300"
-        height="200">
-    </a>
-</div>
- <ul>
+        alt="portrait of Aleigha with camera"
+        width="400"
+        height="600">
+         </a>
+    <h2> Links to my work: </h2>
+    <ul>
         <li><a href="https://www.columbiamissourian.com/users/profile/aleigha%20hornaday/">My Missourian Work</a></li>
         <li><a href="https://www.instagram.com/leighaphotography/">My Photography Page</a></li>
         <li><a href="https://www.aleighahornaday.com">My Portfolio</a></li>
     </ul>
-<nav>
-        <ul>
-            <li><a href="another-page.html">Another Page on My Site</a></li>
-            <li><a href="https://www.instagram.com/leighaphotography/">External Site</a></li>
-        </ul>
-    </nav>
+    <h2> Internal Link: </h2>h2>
+    <ul>
+        <li><a href="blank.html">Link 1</a>a></li>li>
+</ul>
+</body>
 </html>
