--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     
-    <title> NPHc 2024 Homecoming Step Show </title>
+    <title> NPHC 2024 Homecoming Step Show </title>
 <link rel="stylesheet" href="css/final-style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
