--- a/index-list.html
+++ b/index-list.html
@@ -71,7 +71,7 @@
         <p>By Julie Plec</p>
          <p><a href="https://www.amazon.com/vampire-diaries-tvposter">Get "The Vampire Diaries"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-show-04.jpeg"
+        <img src="img/TV-show-04.jpg"
         alt="The Vampire Diaries TV poster"
         border="0"
         width="400"
@@ -104,7 +104,7 @@
         <p>By Lizzy Weiss</p>
          <p><a href="https://www.amazon.com/switched-at-birth-tvposter">Get "Switched At Birth"</a></p>
         <div class="picture-centered-text">
-        <img src="img/TV-show-07.jpeg"
+        <img src="img/TV-show-07.jpg"
         alt="Switched At Birth TV poster"
         border="0"
         width="400"
