--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Aleigha Hornaday's Page </title>
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/final-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="index-list.html">Best Teen Drama Shows from the 2000s</a></li>
+        <li><a class="active" href="index-list.html">Shows</a></li>
         <li><a class="active" href="index-locations.html">Filming Locations</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
       </ul>
@@ -37,8 +37,8 @@
         <img src="img/img-01.jpeg"
         alt="Portrait of Aleigha with Camera"
         border="0"
-        width="400"
-        height="600">
+        width="600"
+        height="400">
 </a>
 
 <h2> My Work: </h2>
