--- a/index-list.html
+++ b/index-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Early 2000s Best TV shows </title>
-     <link rel="stylesheet" href="css/style-list.css">
+     <link rel="stylesheet" href="css/final-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
